--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.9.4",
     "firebase-tools": "^11.8.1",
     "immer": "^9.0.15",
+    "kadvice": "^1.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
